--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -38,3 +38,13 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+    - name: Build dist
+      run: |
+        pip install wheel
+        python3 setup.py bdist_wheel --universal
+
+    - name: Install check
+      run: |
+        pip install .
+
