--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,11 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pytest-asyncio
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install TimeW
+      run: |
+        sudo apt-get update
+        sudo apt-cache search timewarrior
+        sudo apt-get install -y timewarrior
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
